namespace Zmeika
{
    public enum Direction
    {
        Up,
        Down,
        Right,
        Left
    }
}
